# projet-algonquins-scrapper

./: ANALYSE-movie-reco.md  README.md  render.yaml
.github/workflows/: ci.yml  eas-build.yml  keepalive.yml
movie-reco/: .env.example  .gitignore  CLAUDE.md  DATA_LICENSES.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
movie-reco/.claude/rules/: data-sources.md
movie-reco/config/: config.yaml
movie-reco/data/input/: ratings.csv  ratings.example.csv
movie-reco/data/processed/: embeddings.npy  embeddings_ids.json  items.parquet  rated.parquet  structured.parquet
movie-reco/movreco/: __init__.py  cli.py  config.py
movie-reco/movreco/api/: __init__.py  app.py  schemas.py  service.py
movie-reco/movreco/features/: combine.py  embeddings.py  structured.py
movie-reco/movreco/ingest/: __init__.py  cache.py  import_ratings.py  matching.py  synopsis.py  wikidata.py
movie-reco/movreco/llm/: rerank.py
movie-reco/movreco/model/: active.py  evaluate.py  preference.py  taste_vector.py
movie-reco/movreco/recommend/: diversity.py  index.py  pipeline.py  tuning.py
movie-reco/scripts/: __init__.py  simulate_user.py
movie-reco/tests/: _synthetic.py  test_active.py  test_align_embeddings.py  test_api.py  test_api_explain.py  test_api_suggest.py  test_cache.py  test_diversity.py  test_embeddings_backends.py  test_evaluate.py  test_faiss_persistence.py  test_feature_matrix.py  test_import_ratings.py  test_matching.py  test_matching_altlabels.py  test_matching_scoring.py  test_model.py  test_rerank_llm.py  test_serendipity.py  test_structured_extended.py  test_structured_features.py  test_synopsis_fulltext.py  test_taste_vector_degenerate.py  test_temporal_ndcg.py  test_tuning.py
swipe-movie/: BUILD.md  INTEGRATION.md  README.md  TESTS.md  design_guidelines.json
swipe-movie/.emergent/: emergent.yml
swipe-movie/backend/: SANDBOX.md  auth.py  database.py  demo_synergy.py  integrated_api.py  licensing.py  recommender.py  recommender_bridge.py  requirements-sandbox.txt  requirements-tmdb.txt  seed_data.py  server.py
swipe-movie/frontend/: app.json  eas.json  package-lock.json  package.json
swipe-movie/memory/: PRD.md
swipe-movie/test_reports/: iteration_1.json
(+30 files in other folders)
