[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movreco"
version = "0.1.0"
description = "Recommandeur de films personnel base sur Wikidata (CC0) et embeddings semantiques"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pandas>=2.1",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "rapidfuzz>=3.6",
  "tqdm>=4.66",
  "pyarrow>=15.0",
  "sentence-transformers>=2.7",
  "faiss-cpu>=1.8",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "joblib>=1.3",
  "anthropic>=0.39",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
movreco = "movreco.cli:app"

[tool.setuptools.packages.find]
include = ["movreco*"]
