[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movreco"
version = "0.1.0"
description = "Recommandeur de films personnel base sur Wikidata (CC0) et embeddings semantiques"
requires-python = ">=3.11"
# Placeholder a confirmer par le proprietaire : remplacer par la licence definitive.
license = {text = "Proprietary - à définir"}
dependencies = [
  "requests>=2.31",
  "pandas>=2.1",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "rapidfuzz>=3.6",
  "tqdm>=4.66",
  "pyarrow>=15.0",
  "faiss-cpu>=1.8",
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
# Couche LLM optionnelle (re-ranking/explications) : pip install -e ".[llm]"
llm = ["anthropic>=0.39"]
# API FastAPI (moteur expose en service) : pip install -e ".[api]"
api = ["fastapi>=0.110", "uvicorn>=0.29"]
# Embeddings sentence-transformers (qualite superieure, tire torch ~Go) :
# pip install -e ".[st]". Sans cet extra, le backend tfidf (scikit-learn) est
# utilise par defaut (config embeddings.backend=auto/tfidf), sans torch.
st = ["sentence-transformers>=2.7"]

[project.scripts]
movreco = "movreco.cli:app"

[tool.setuptools.packages.find]
include = ["movreco*"]
